cpp/build.log
g++ -std=c++17 -O3 -Wall -fPIC -pthread -I/opt/homebrew/include -I. -c bam_processor.cpp -o bam_processor.o
g++ -std=c++17 -O3 -Wall -fPIC -pthread -I/opt/homebrew/include -I. -c extract_reads.cpp -o extract_reads.o
extract_reads.cpp:323:17: error: redefinition of 'l_qseq'
  323 |         int32_t l_qseq = aln->core.l_qseq;
      |                 ^
extract_reads.cpp:313:17: note: previous definition is here
  313 |         int32_t l_qseq = aln->core.l_qseq;  // Get sequence length from bam record
      |                 ^
1 error generated.
make: *** [extract_reads.o] Error 1
